# API_Conta_Bancaria

./: .env  .gitignore  README.md  create_db.py  create_tables.sql  pyproject.toml  requirements.txt  test.db
app/: config.py  database.py  exceptions.py  main.py  security.py
app/controllers/: account.py  auth.py  transaction.py
app/models/: account.py  transaction.py
app/schemas/: account.py  auth.py  transaction.py
app/services/: account.py  transaction.py
app/views/: transaction.py
images/: Criando_pyproject.toml
